# mipt-cs-3rd-sem

./: README.md
semaphore/: 1_sem.c  2_sem.c  3_shmsem-owner.c  4_shmsem-user.c  5_pin-pong.c
semaphore/pingpong/: CMakeLists.txt  common.h  init.c  worker.c
shmem/: 1_SHmem.c  2_SHmem.c  3_shm-example-owner.c  4_shm-example-user.c  5_sh_aska.c
signals/: 1_fpointer.c  2_kill.c  3_signal-child.c  3_signal-parent.c  4_sigaction.c  5_calc.c
signals/carousel/: CMakeLists.txt  client.c  common.h  manager.c
threads/: 1 join.c  1! join double.c  2 cancel.c  3 multithread.c
